kubernetes/payment-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-gateway
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-gateway
  template:
    metadata:
      labels:
        app: payment-gateway
    spec:
      containers:
        - name: payment-gateway
          image: henryarrovin/payment-gateway:latest
          ports:
            - containerPort: 8081
            - containerPort: 50052
          volumeMounts:
            - name: logs
              mountPath: /apps/logs
          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 10
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: logs-pvc
