kubernetes/payment-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-gateway-service
  namespace: auth
spec:
  selector:
    app: payment-gateway
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      targetPort: 8081
    - name: grpc
      port: 50052
      targetPort: 50052
