kubernetes/payment-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-gateway-ingress
  namespace: auth
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/payments
            pathType: Prefix
            backend:
              service:
                name: payment-gateway-service
                port:
                  number: 8081
